Fix slider caption misalignment for IE

--- a/assets/less/_flexslider.less
+++ b/assets/less/_flexslider.less
@@ -215,16 +215,14 @@
 }
 
 .flex-caption {
+    .container();
     position: absolute;
+    display: inline-block;
+    float: left;
     left: 0;
     right: 0;
-    z-index: 1;
-    padding: 30px;
-    display: inline-block;
-    max-width: @screen-lg;
-    float: left;
-    margin: auto;
     bottom: 50px;
+    z-index: 1;
 
     .excerpt {
         background: @gray-lighter;
